# cmakeDemo

./: CMakeLists.txt  README.md
Step1/: CMakeLists.txt  tutorial.cc  tutorial.h
Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step2/: CMakeLists.txt  tutorial.cc  tutorial.h
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt  mysqrt.cc  mysqrt.h
